<resources>
    <string name="app_name">mstrong-reflex</string>

    <string name="single_prompt">Are you ready?</string>
    <string name="start_countdown">Let\'s Go!</string>
    <string name="action_settings">Settings</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multiple Players</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_single_player">SinglePlayer</string>

    <string name="title_activity_stats">stats</string>
    <string name="title_activity_display_stats">displayStats</string>

    <string name="email_button">Email Stats</string>
    <string name="clear_button">Clear Stats</string>

    <string name="gameshow_prompt">How many Players?</string>
    <string name="title_activity_gameshow_picker">GameshowPicker</string>
    <string name="gameshow_2">Two Players</string>
    <string name="gameshow_3">Three Players</string>
    <string name="gameshow_4">Four Players</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="title_activity_gameshow_two">GameshowTwo</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gameshow_three">GameshowThree</string>
    <string name="title_activity_gameshow_four">GameshowFour</string>
    <string name="title_activity_game_show_results">GameShowResults</string>
</resources>
