<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".mstrong_reflex">

    <Button
        android:id="@+id/single_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_player"
        android:onClick="start_singleplayer"
        android:clickable="true"
        android:layout_above="@+id/multi_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/multi_button"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multi_player"
        android:onClick="multiPlayer"
    />

    <Button
        android:id="@+id/stats_button"
        android:layout_below="@+id/multi_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:onClick="showStats"
        />

</RelativeLayout>
